--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             style="font-size: 11pt; font-family: Georgia; color: rgb(0, 0, 0); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
             ><span style="border: none; display: inline-block; overflow: hidden; width: 105px; height: 113px"
               ><img
-                src="https://lh3.googleusercontent.com/LdAaw7nH4daBHaHQb5v3kOMQnstmjPpIIkPhUkDKHzq5czFtT3iC2cpNUnF6-FE9rfxB85-zhp7biKcar1_-137-ZBzWKK7Y9aK6SosqAbhTTVCRsAuBvfYR3nPEHhBJQCPyOtOsZTzLSApWfw"
+                src="./img/logo.svg"
                 width="105"
                 height="113"
                 style="margin-left: 0px; margin-top: 0px" /></span
@@ -57,7 +57,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="https://lh5.googleusercontent.com/dOa6H7yJSaayEE56oXrd6G0CQvYK8-dkLPIj0kukV4W30iM8xxcoDx-Nu8NwceSY6xNDuLv6cyTzKHGGDr8J3Zr5VwG3uQWOa7vF2IUbMqttyq7Z__-SGMejxXwbmF8ENsofg7e7uLKhW9qiPA"
+                  src="./img/web.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -67,7 +67,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="https://lh6.googleusercontent.com/NWLawObicPzhREyS9vdWDTECPundCswnoic4cNUcqeIqzA8L5iw45PZQ2uxwhwKhUwrnQfA0UbFmE68A5tfQ37uOw1ZXjnR-LTxkB9jAJetvG6MsNt-SgGfV2KLtt_u69w9osd4DYV_omr71MA"
+                  src="./img/facebook.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -77,7 +77,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="https://lh5.googleusercontent.com/ntKmDgiEn1LeHt8VJS6XAITgK0RVH1Hk81gXZuVF2zSADrVtLZnLNmD5qSGD9AMdyGp-UMnZEwNOH1VO8BpfirHQr-5FvLrFHommtoAKmi87zDbgcsUfCX4C1FjXUC9z97_9jj39WhjLzcAfzA"
+                  src="./img/instagram.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -87,7 +87,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="https://lh6.googleusercontent.com/Ys8ERKH1n9KlIxyfY-pCW7fVb-_bXBliydnpbzlIiUYQ8RQK8CWMWMStO8HnV08IaPvVpBVpHyLos8hrzNE2v0aqtInjnmR3JLixIVGzhTZFrSrl1b8Nz_ma980hbBDaOvvra3-fz9oyEfGDBA"
+                  src="./img/twitter.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span
