--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             style="font-size: 11pt; font-family: Georgia; color: rgb(0, 0, 0); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
             ><span style="border: none; display: inline-block; overflow: hidden; width: 105px; height: 113px"
               ><img
-                src="./img/logo.svg"
+                src="https://theguidon.github.io/email-signature/img/logo.svg"
                 width="105"
                 height="113"
                 style="margin-left: 0px; margin-top: 0px" /></span
@@ -57,7 +57,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="./img/web.svg"
+                  src="https://theguidon.github.io/email-signature/img/web.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -67,7 +67,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="./img/facebook.svg"
+                  src="https://theguidon.github.io/email-signature/img/facebook.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -77,7 +77,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="./img/instagram.svg"
+                  src="https://theguidon.github.io/email-signature/img/instagram.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span></a
@@ -87,7 +87,7 @@
               style="font-size: 11pt; font-family: Georgia; color: rgb(17, 85, 204); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
               ><span style="border: none; display: inline-block; overflow: hidden; width: 38px; height: 38px"
                 ><img
-                  src="./img/twitter.svg"
+                  src="https://theguidon.github.io/email-signature/img/twitter.svg"
                   width="38"
                   height="38"
                   style="margin-left: 0px; margin-top: 0px" /></span></span
