--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </colgroup>
   <tbody>
     <tr style="height: 123.89pt">
-      <td style="border-right: 2.25pt solid rgb(19, 70, 130); vertical-align: middle; padding: 5pt; overflow: hidden">
+      <td style="border-right: 2.25pt solid rgb(19, 70, 130); vertical-align: middle; padding: 5pt 16pt 5pt 5pt; overflow: hidden">
         <p dir="ltr" style="line-height: 1.2; text-align: center; margin-top: 0pt; margin-bottom: 0pt">
           <span
             style="font-size: 11pt; font-family: Georgia; color: rgb(0, 0, 0); background-color: transparent; vertical-align: baseline; white-space: pre-wrap"
